# rusty-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/2023-04-13-155551_create_users/: up.sql
backend/src/: database.rs  error.rs  jwt.rs  lib.rs  main.rs  password.rs  schema.rs
backend/src/auth/: dto.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs
backend/src/users/: dto.rs  handlers.rs  mod.rs  model.rs  service.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: .taurignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: api.rs  hooks.rs  layout.rs  lib.rs  main.rs  router.rs  store.rs  utils.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: delete_account.rs  log_out.rs  mod.rs  nav_bar.rs  update_password.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  profile.rs  register.rs
