[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.160", features = ["derive"] }
argon2 = "0.5.0"
thiserror = "1.0.40"
jsonwebtoken = "8.3.0"
anyhow = "1.0.70"
serde_json = "1.0.96"
