[package]
name = "tauri-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
js-sys = "0.3"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.96"
yew-router = "0.17.0"
yewdux = "0.9.2"
chrono-humanize = "0.2.2"
validator = { version = "0.16.0", features = ["derive"] }
reqwasm = "0.5.0"
thiserror = "1.0.40"
common = { version = "0.1.0", path = "../common" }
